# batch-video2

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.ha.yml  pyproject.toml  setup.cfg  setup_dev.sh  start_celery.sh
core/: exceptions.py  logging_config.py
core/cache/: __init__.py
core/clients/: __init__.py  base_client.py  celery_image_service.py  flux_client.py  image_client.py  storage_client.py  tts_client.py
core/config/: __init__.py  api.py  celery_config.py  constants.py  paths.py  settings.py  status.py  validation.py  video_config.py
core/db/: __init__.py  async_session.py  models.py  session.py  sharding.py
core/db/dao/: __init__.py  async_base_dao.py  base_dao.py  cached_dao.py  job_dao.py
core/interfaces/: __init__.py  service_interfaces.py  step_factory.py
core/monitoring/: __init__.py  alerts.py  db_metrics.py  health.py  metrics.py  middleware.py  tracing.py
core/security/: __init__.py  circuit_breaker.py  encryption.py  input_validation.py  key_rotation.py  middleware.py  rate_limit.py
core/services/: __init__.py  base_crud_service.py
core/text/: __init__.py
core/text/splitters/: base.py  markdown.py
core/utils/: __init__.py  api_helpers.py  asyncio_helpers.py  crud_helpers.py  exception_handler.py  ffmpeg.py  http_session.py  password.py  retry.py  schema_converter.py  time_formatter.py
core/utils/ffmpeg/: __init__.py  audio_operations.py  builder.py  composite_operations.py  core.py  video_operations.py
scripts/migrations/: job_execution_migration.py
services/: README.md
services/backend/: API.md  README.md  __init__.py  api_main.py  config.py  dockerfile  ossutils.py  requirements.txt  start.sh  stop.sh
services/backend/api/: account.py  file.py  health.py  job.py  job_split.py  language.py  topic.py  utils.py  voice.py
services/backend/db/: models.py  session.py
services/backend/doc/: account.md  job.md  job_split.md  language.md  topic.md  voice.md
services/backend/schema/: account.py  job.py  job_split.py  language.py  topic.py  utils.py  voice.py
services/image_gen/: README.md
services/tts/: README.md
services/worker/: README.md  REFACTORING_SUMMARY.md  __init__.py  check_job_status.py  check_running_jobs.py  combine.py  config.py  gushi.py  list_pending_jobs.py  main.py  manual_process_job.py  pipe_line.py  prompt.py  pyproject.toml  start.sh  start_worker.sh  tasks.py  worker_main.py
services/worker/clients/: ai_image_client.py  azure_tts_client.py  batch_synthesis.py  flux_client.py  tts_seedvc_client.py
services/worker/db/: session.py
services/worker/job_processing/: __init__.py  data_preparer.py  file_uploader.py  job_executor.py
services/worker/pipeline/: __init__.py  context.py  data.py  executor.py  factory.py  input_resolver.py  pipeline.py  result_manager.py  state_manager.py  status_updater.py  video_pipeline.py  video_pipeline_steps.py
services/worker/pipeline/results/: __init__.py  base.py  image.py  postprocess.py  split.py  subtitle.py  tts.py  upload.py  video.py
services/worker/pipeline/steps/: __init__.py  base.py  human_step.py  image_step.py  postprocess_step.py  results.py.backup  split_step.py  subtitle_step.py  tts_step.py  upload_step.py  video_step.py
services/worker/scheduler/: DEPRECATED.md  __init__.py  job_retry_handler.py  job_scheduler.py  job_status_manager.py
services/worker/services/: __init__.py  base.py
services/worker/services/digital_human/: __init__.py  audio_processor.py  digital_human_service.py  human_pipeline.py  human_pipeline_helpers.py  human_pipeline_refactored.py  path_manager.py  video_processor.py
services/worker/services/digital_human/heygem/: README.md  __init__.py  config.py  engine.py
services/worker/services/image/: __init__.py  image_handlers.py  image_service.py
services/worker/services/subtitle/: __init__.py  subtitle_service.py
services/worker/services/tts/: __init__.py  tts_service.py
services/worker/services/video/: __init__.py  video_handlers.py  video_service.py
services/worker/tasks/: image_tasks.py
services/worker/utils/: auth.py  content_process.py  content_process_config.py  cover_draw_text.py  detailed_logger.py  image_description_generator.py  image_embedding_tool.py  image_generator.py  oss_file_utils.py  srt_processor.py  subtitle_formatter.py  text_processor.py  textspliter.py  util.py  video_combiner.py  video_composer.py  video_generation_steps.py  video_processor.py  video_utils.py
services/worker/utils/file_manager/: __init__.py  file_manager.py
services/worker/utils/generation/: __init__.py  audio_generator.py  digital_human_handler.py  final_composer.py  generation_utils.py  image_generator_steps.py  path_config.py  subtitle_handler.py  video_generation_config.py  video_generator_steps.py
services/worker/utils/image_description/: REFACTORING_ARCHITECTURE.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  __init__.py  base_generator.py  config.py  factory.py  image_description_generator.py  json_utils.py  v1_generator.py  v2_generator.py
tests/: conftest.py
tests/unit/: test_example.py
(+116 files in other folders)
