[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "ffmpeg>=1.4",
    "mysql-connector-python>=9.4.0",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.2",
    "sentence-transformers>=5.1.0",
    "sqlmodel>=0.0.24",
]
